--- a/frontend/src/app/task/task.component.css
+++ b/frontend/src/app/task/task.component.css
@@ -8,7 +8,7 @@
   border-radius: 10px;
   padding: 10px;
   background-color: #82f6b7;
-  margin-bottom: 10px;
+  margin: 10px 0 10px 0;
 }
 
 .task-container.COMPLETED {
